# ros2_grasp_service

./: .gitignore  .pre-commit-config.yaml  README.md  python_linter.flake8  setup.sh
.devcontainer/: Dockerfile  devcontainer.json  repos_to_submodules.py
.github/: dependabot.yml
.github/actions/lint/: action.yml  run.sh
.github/actions/test/: action.yml
.github/workflows/: build_and_test.yaml  build_and_test_jazzy.yaml  build_and_test_rolling.yaml  docs.yaml  linters.yaml  ros.yaml
ros2_grasp_service/: package.xml  setup.cfg  setup.py
ros2_grasp_service/config/: grasp_service_config.yaml
ros2_grasp_service/launch/: grasp_service.launch.py
ros2_grasp_service/ros2_grasp_service/: grasp_service.py  grasp_service_parameters.py  grasp_service_parameters.yaml
ros2_grasp_service_demo/manipulator_simulation/: package.xml  setup.cfg  setup.py
ros2_grasp_service_demo/manipulator_simulation/launch/: gazebo.launch.py  manipulator_simulation_bringup.launch.py
ros2_grasp_service_demo/manipulator_simulation/models/big_box/: model.config  model.sdf
ros2_grasp_service_demo/manipulator_simulation/worlds/: default_world.sdf  default_world.world
ros2_grasp_service_demo/open_manipulator/open_manipulator_bringup/: package.xml  setup.py
ros2_grasp_service_demo/open_manipulator/open_manipulator_bringup/config/: grasp_service_config.yaml
ros2_grasp_service_demo/open_manipulator/open_manipulator_bringup/launch/: open_manipulator_bringup.launch.py
ros2_grasp_service_demo/open_manipulator/open_manipulator_control/: package.xml  setup.cfg  setup.py
ros2_grasp_service_demo/open_manipulator/open_manipulator_control/config/: controllers.yaml
ros2_grasp_service_demo/open_manipulator/open_manipulator_control/launch/: control.launch.py
ros2_grasp_service_demo/open_manipulator/open_manipulator_description/: package.xml  setup.cfg  setup.py
ros2_grasp_service_demo/open_manipulator/open_manipulator_description/urdf/: open_manipulator.xacro  open_manipulator_robot.xacro  ros2_control.xacro
ros2_grasp_service_demo/open_manipulator/open_manipulator_moveit/: .setup_assistant  CMakeLists.txt  package.xml
(+6 files in other folders)
