<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_grasp_service</name>
  <version>1.0.0</version>
  <description>Simple grasp service</description>
  <maintainer email="wiktorbajor1@gmail.com">Wiktor Bajor</maintainer>
  <license>Apache-2.0</license>

  <depend>generate_parameter_library</depend>
  <depend>control_msgs</depend>
  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>time</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
