<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_bringup</name>
  <version>1.0.0</version>
  <description>Bring up package for OpenManipulator</description>
  <maintainer email="wiktorbajor1@gmail.com">Wiktor Bajor</maintainer>
  <license>Apache License 2.0</license>

  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros2_grasp_service</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
